Pricing page styling- desktop version (#14)
* compute complete

* half-way through form

* bugs left to fix -general layout created

* Add missing div

* navbar behavior changed

* fix select styling

* Latest Desktop version

--- a/themes/cca-general/resources/less/style.less
+++ b/themes/cca-general/resources/less/style.less
@@ -4,14 +4,14 @@ color scheme:
     #1d2671 as Blue
     #f16529 as Orange
     #f5f7f1 as White
-    #ccc as Light grey
+    #ccc as lighter grey
     #6d6e71 as Dark grey
 
 font-family:
     proxima nova
 
 font-weights:
-    Light
+    lighter
     Normal
     Semibold: 600
     Bold
@@ -56,7 +56,7 @@ li {
     font-weight: lighter;
 }
 
-#homepage h5 {
+#footer h5 {
     font-size: 12px;
     text-transform: uppercase;
     color: #ec1c23;
@@ -73,23 +73,12 @@ li {
     font-size: 14px;
     font-family: "Proxima-Nova", sans-serif;
     font-weight: normal;
+    position: absolute;
 
-    transition: all linear 750ms;
-    transition-property: opacity, background-color;
 }
 
 #navbar .logo-white {
     margin-top: 5px;
-}
-
-#navbar.scroll-hidden {
-    opacity: 0.0;
-    transition: opacity linear 250ms;
-}
-
-#navbar.scroll-visible {
-    opacity: 1.0;
-    transition: opacity linear 250ms;
 }
 
 #navbar .nav-item {
@@ -533,8 +522,6 @@ margin-right: auto;
     background: -o-linear-gradient(#f5f7f1, #ccc);
     background: -moz-linear-gradient(#f5f7f1, #ccc);
     background: linear-gradient(#f5f7f1, #ccc);
-    position: relative;
-    z-index: 500;
 }
 
 #footer.footer.card-section {
@@ -589,7 +576,7 @@ margin-right: auto;
 @media screen and (max-width : 768px) {
 
     .footer .mobile-footer-settings {
-         display: block;
+        display: block;
         margin-top: 10px;
     }
 
@@ -648,12 +635,12 @@ margin-right: auto;
 
     /* Footer Content */
 
-    #footer #menu-items .card-section .footer h5 {
+    #footer h5 {
         font-size: 12px;
         text-transform: uppercase;
         color: #ec1c23;
         font-weight: 600;
-        font-family: "Proxima-Nova",sans-serif;
+        font-family: "Proxima-Nova", sans-serif;
     }
 
     .footer a {
@@ -711,6 +698,8 @@ margin-right: auto;
     font-family: "Proxima-Nova", sans-serif;
 }
 
+
+/* SECONDARY PAGES -- CONTENT NAVBAR*/
 .content-main-nav {
     background-color: #fff;
     padding: 0;
@@ -761,6 +750,8 @@ margin-right: auto;
     background-color: #fff;
 }
 
+/* SECONDARY PAGES -- CONTENT CARD*/
+
 .content-card {
     padding: 120px 0;
 }
@@ -774,12 +765,30 @@ margin-right: auto;
 
 .content-card h2 {
     color: #ec1c23;
+    padding: 30px 15px 0 5px;
 }
 
 .content-card p {
+    font-size: 17px;
     color: #6d6e71;
+    padding: 10px 20px 0 15px;
 }
 
+.next-button a {
+    font-size: 17px;
+    font-weight: bold;
+    color: #ec1c23;
+    padding: 0 0 0 15px;
+}
+
+.special-offer {
+    background-color: #ec1c23;
+    font-size: 13px;
+    color: #fff;
+    text-transform: uppercase;
+    padding: 10px 15px;
+    margin: 7px 7px;
+}
 
 .services-card {
     /* For browsers that do not support gradients */
@@ -790,5 +799,262 @@ margin-right: auto;
     background: -moz-linear-gradient(#ec1c23, #1d2671);
     background: linear-gradient(#ec1c23, #1d2671);
 
-    padding: 180px 0 80px;
+    color: #fff;
+    padding-bottom: 200px;
+}
+
+.services-card h3 {
+    font-weight: lighter;
+    margin: 80px 0 0 0;
+}
+
+.services-card a {
+    color: #fff;
+    text-decoration: underline;
+}
+
+.compute-price-row {
+    margin-top: 20px;
+    padding-left: 30px;
+}
+
+.compute-price-col {
+    border-right: 1px solid #fff;
+}
+
+.compute-price-p {
+    padding-top: 20px;
+    margin-bottom: 5px;
+}
+
+.dollar-sign {
+    font-size: 36px;
+    font-weight: lighter;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+    top: -10px;
+}
+
+.cost-amount {
+    font-size: 60px;
+    font-weight: lighter;
+    line-height: 0;
+}
+
+.monthly-word {
+    font-size: 12px;
+    font-weight: lighter;
+    line-height: 0
+}
+
+.vcpu-gb {
+    padding-left: 30px;
+    font-size: 14px;
+    line-height: 0;
+    position :relative;
+    top: 10px;
+}
+
+.other-compute {
+    font-size: 12px;
+    margin-top: 20px;
+    text-align: right;
+}
+
+
+.storage h6 {
+    text-transform: uppercase;
+    font-size: 15px;
+    margin: 20px 0 20px 20px;
+
+}
+
+.block-storage {
+    border-right: 1px solid #fff;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    margin-left: 5px;
+}
+
+.storage-3 {
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    margin-right: 215px;
+}
+
+.dollar-sign-storage {
+    font-size: 18px;
+    font-weight: lighter;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+    top: -10px;
+}
+
+.cost-storage {
+    font-size: 28px;
+    font-weight: lighter;
+    line-height: 0;
+}
+
+.IOPS-GB {
+    font-size: 14px;
+    padding-left: 17px;
+    margin-bottom: 25px;
+}
+
+.storage-amount {
+    margin: 35px auto 0;
+}
+
+.with-right-border {
+    border-right: 1px solid #fff;
+    padding-right: 0;
+}
+
+.storage-option {
+    padding-right: 0;
+}
+
+.storage-3-option {
+    padding-bottom: 46px;
+}
+
+.additional-performance {
+    font-size: 12px;
+    margin-top: 20px;
+    padding: 0;
+}
+
+.networking h3 {
+    padding-bottom: 30px;
+}
+
+.table td {
+    border-top: none;
+    padding: 18px;
+    color: #fff;
+    font-size: 18px;
+}
+
+.table-striped tbody tr:nth-of-type(2n+1) {
+    background-color: rgba(249, 249, 249, 0.1);
+}
+
+.licenses-term-discounts h3 {
+    padding-bottom: 10px;
+}
+
+.licenses-term-discounts p {
+    padding-left: 15px;
+    font-size: 18px;
+}
+
+.license-mobility p {
+    font-size: 12px;
+    text-align: right;
+}
+
+.buttons-row {
+    padding-left: 8px;
+}
+
+.special-offers-services {
+    background-color: #fff;
+    padding: 10px 15px;
+    margin: 7px 7px;
+}
+
+a.btn.special-offers-services {
+    font-size: 13px;
+    color: #f16529;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.contact-form h5 {
+    font-size: 28px;
+    font-weight: lighter;
+    padding: 80px 0 20px;
+}
+
+.form-control {
+    border: none;
+    border-radius: 0;
+    background-color: rgba(249, 249, 249, 0.1);
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 18px;
+    padding: 20px;
+    line-height: 18px;
+    height: 62px;
+}
+
+textarea#Form-Requirements.form-control {
+    height: 200px;
+}
+
+.form-group {
+    margin-bottom: 8px;
+}
+
+.small-box-col-1 {
+    padding-right: 4px;
+}
+
+.small-box-col-2 {
+    padding-left: 4px;
+}
+
+.form-control::placeholder {
+    color: rgba(249, 249, 249, 0.6);
+}
+
+select#Form-Origin-Country {
+    color: rgba(249, 249, 249, 0.6);
+    font-size: 18px;
+
+    line-height: 18px;
+    height: 62px;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    background-image: url('../images/down-arrow.png');
+    background-repeat: no-repeat;
+    background-position: center right 10px;
+}
+
+select#Form-Origin-Country::-ms-expand {
+    display: none;
+}
+
+select#Form-Origin-Country:focus {
+    background-color: rgba(249, 249, 249, 0.1);
+    color: #fff;
+}
+
+select#Form-Origin-Country option {
+    color: #000;
+}
+
+.form-control:focus {
+    background-color: rgba(249, 249, 249, 0.1);
+    color: #fff;
+}
+
+.services-list h3 {
+    margin-top: 60px;
+}
+
+.services-list img {
+    margin-top: 60px;
+    resize: 120%;
+}
+
+.services-list p {
+    font-size: 18px;
+    margin: 10px 0 0 20px;
 }
