--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-expand-lg content-main-nav">
 
   <div class="collapse navbar-collapse d-flex justify-content-center">
@@ -40,7 +41,7 @@
 <div class="content-card card-section">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-4 offset-lg-1 offset-md-1 col-sm-12">
+            <div class="col-lg-4 offset-lg-1 col-sm-12">
                 <h1>Lesson 1</h1>
                 <h2>Our Infrastructure as a Service (IaaS) is purpose built for:</h2>
                 <p>
@@ -54,11 +55,23 @@
                     nulla facilisis at vero eros et accumsan et iusto odio
                     dignissim qui blandit.
                 </p>
-                <a href="#">Next lesson</a>
-                <a class="btn btn-primary" href="#" role="button">Special offers</a>
-                <a class="btn btn-primary" href="#" role="button">Special offers</a>
-                <a class="btn btn-primary" href="#" role="button">Special offers</a>
-                <a class="btn btn-primary" href="#" role="button">Special offers</a>
+                <div class="row">
+                    <div class="col-lg-12 col-sm-12 next-button">
+                        <a href="#">Next lesson &#x227B;</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-sm-12">
+                        <a class="btn special-offer" href="#" role="button">Special offers</a>
+                        <a class="btn special-offer" href="#" role="button">Special offers</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-sm-12">
+                        <a class="btn special-offer" href="#" role="button">Special offers</a>
+                        <a class="btn special-offer" href="#" role="button">Special offers</a>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-6 col-sm-12">
                 <div class="embed-responsive embed-responsive-16by9">
