--- a/themes/cca-general/layouts/partials/pricing/services-card.html
+++ b/themes/cca-general/layouts/partials/pricing/services-card.html
@@ -1,87 +1,117 @@
-
-
-<div class="services-card">
-
+<div class="services-card pricing">
 
     <div class="row">
         <div class="col-lg-11 offset-lg-1 col-sm-12">
             <h3>Compute</h3>
         </div>
-        <div class="col-lg-11 offset-lg-1 col-sm-12">
+        <div class="col-lg-11 offset-lg-1 col-sm-12 compute-price-row">
             <div class="row">
-                <div class="col-lg-2 col-sm-12">
-                    <p>$108 Monthly</p>
-                    <p>2 VCPU / 8 GB RAM</p>
+                <div class="col-lg-2 col-sm-12 compute-price-col">
+                    <p class="compute-price-p">
+                        <span class="dollar-sign">$</span>
+                        <span class="cost-amount">108</span>
+                        <span class="monthly-word"> Monthly</span>
+                    </p>
+                    <p class="vcpu-gb">2 VCPU / 8 GB RAM</p>
+                </div>
+                <div class="col-lg-2 col-sm-12 compute-price-col">
+                    <p class="compute-price-p">
+                        <span class="dollar-sign">$</span>
+                        <span class="cost-amount">144</span>
+                        <span class="monthly-word"> Monthly</span>
+                    </p>
+                    <p class="vcpu-gb">2 VCPU / 8 GB RAM</p>
+                </div>
+                <div class="col-lg-2 col-sm-12 compute-price-col">
+                    <p class="compute-price-p">
+                        <span class="dollar-sign">$</span>
+                        <span class="cost-amount">216</span>
+                        <span class="monthly-word"> Monthly</span>
+                    </p>
+                    <p class="vcpu-gb">4 VCPU / 16 GB RAM</p>
+                </div>
+                <div class="col-lg-2 col-sm-12 compute-price-col">
+                    <p class="compute-price-p">
+                        <span class="dollar-sign">$</span>
+                        <span class="cost-amount">360</span>
+                        <span class="monthly-word"> Monthly</span>
+                    </p>
+                    <p class="vcpu-gb">32 VCPU / 4 GB RAM</p>
                 </div>
                 <div class="col-lg-2 col-sm-12">
-                    <p>$144 Monthly</p>
-                    <p>2 VCPU / 8 GB RAM</p>
-                </div>
-                <div class="col-lg-2 col-sm-12">
-                    <p>$216 Monthly</p>
-                    <p>4 VCPU / 16 GB RAM</p>
-                </div>
-                <div class="col-lg-2 col-sm-12">
-                    <p>$360 Monthly</p>
-                    <p>32 VCPU / 4 GB RAM</p>
-                </div>
-                <div class="col-lg-2 col-sm-12">
-                    <p>$684 Monthly</p>
-                    <p>8 VCPU / 60GB RAM</p>
+                    <p class="compute-price-p">
+                        <span class="dollar-sign">$</span>
+                        <span class="cost-amount">684</span>
+                        <span class="monthly-word"> Monthly</span>
+                    </p>
+                    <p class="vcpu-gb">8 VCPU / 60GB RAM</p>
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 offset-lg-7 col-sm-12">
-            <p>Other compute offerings are available.
+        <div class="col-lg-4 offset-lg-7 col-sm-12 other-compute">
+            <p>
+                Other compute offerings are available.
                 <a href="#">Contact us</a>
-                 for details.</p>
+                for details.
+             </p>
         </div>
     </div>
 
-
-
-    <div class="row">
+    <div class="row storage">
         <div class="col-lg-11 offset-lg-1 col-sm-12">
             <h3>Storage</h3>
         </div>
         <div class="col-lg-7 offset-lg-1 col-sm-12">
-            <h6>HIGH PERFORMANCE BLOCK STORAGE—HIGHLY AVAILABLE SSD</h6>
-            <div class="row">
-                <div class="col-lg-4 col-sm-12">
-                    <p>$0.25 CAD / GBMonthly</p>
-                    <p>1 IOPS/GB*</p>
+            <h6>high performance block storage-highly available SSD</h6>
+            <div class="row block-storage">
+                <div class="col-lg-4 col-sm-12 storage-option">
+                    <p class="storage-amount with-right-border">
+                        <span class="dollar-sign-storage">$</span>
+                        <span class="cost-storage">0.25 CAD / GB</span>
+                        <span class="monthly-word"> Monthly</span>
+                    </p>
+                    <p class="IOPS-GB with-right-border">1 IOPS/GB*</p>
                 </div>
-                <div class="col-lg-4 col-sm-12">
-                    <p>$0.50 CAD / GBMonthly</p>
-                    <p>5 IOPS/GB*</p>
+                <div class="col-lg-4 col-sm-12 storage-option">
+                    <p class="storage-amount with-right-border">
+                        <span class="dollar-sign-storage">$</span>
+                        <span class="cost-storage">0.50 CAD / GB</span>
+                        <span class="monthly-word"> Monthly</span>
+                     </p>
+                    <p class="IOPS-GB with-right-border">5 IOPS/GB*</p>
                 </div>
-                <div class="col-lg-4 col-sm-12">
-                    <p>$0.75 CAD / GBMonthly</p>
-                    <p>10 IOPS/GB*</p>
+                <div class="col-lg-4 col-sm-12 storage-option">
+                    <p class="storage-amount">
+                        <span class="dollar-sign-storage">$</span>
+                        <span class="cost-storage">0.75 CAD / GB</span>
+                        <span class="monthly-word"> Monthly</span>
+                     </p>
+                    <p class="IOPS-GB">10 IOPS/GB*</p>
                 </div>
             </div>
         </div>
         <div class="col-lg-4 col-sm-12">
-            <h6>OBJECT STORAGE—3 REPLICAS</h6>
-            <div class="row">
-                <div class="col-lg-12 col-sm-12">
-                    <p>$0.05 CAD / GBMonthly</p>
+            <h6>object storage—3 replicas</h6>
+            <div class="row storage-3">
+                <div class="col-lg-12 col-sm-12 storage-option storage-3-option">
+                    <p class="storage-amount">
+                        <span class="dollar-sign-storage">$</span>
+                        <span class="cost-storage">0.05 CAD / GB</span>
+                        <span class="monthly-word"> Monthly</span>
+                    </p>
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 offset-lg-7 col-sm-12">
+        <div class="col-lg-4 offset-lg-7 col-sm-12 additional-performance">
             <p>*Minimum guaranteed IOPS. Additional performance tiers available, <a href="#">contact us</a> for details.</p>
         </div>
     </div>
 
-
-
-
     <div class="row">
-        <div class="col-lg-5 offset-lg-1 col-sm-12">
+        <div class="col-lg-5 offset-lg-1 col-sm-12 networking">
             <h3>Networing</h3>
-            <table class="table table-striped">
 
+            <table class="table table-striped">
                 <tbody>
                     <tr>
                         <td>PUBLIC IPS</td>
@@ -118,14 +148,15 @@
                         <td>Contact us for details</td>
                     </tr>
                     <tr>
-                        <td>FIREWALL (ENTERPRISE))</td>
+                        <td>FIREWALL (ENTERPRISE)</td>
                         <td>Contact us for details</td>
                     </tr>
                 </tbody>
             </table>
+
         </div>
 
-        <div class="col-lg-4 offset-lg-1 col-sm-12">
+        <div class="col-lg-4 offset-lg-1 col-sm-12 licenses-term-discounts">
             <div class="row">
                 <div class="col-lg-12 col-sm-12">
                     <h3> Licenses</h3>
@@ -134,7 +165,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-11 offset-lg-1 col-sm-11 offset-sm-11">
+                <div class="col-lg-11 offset-lg-1 col-sm-11 offset-sm-11 license-mobility">
                     <p>*Microsoft clients who meet the criteria are eligible for License Mobility through Microsoft Software Assurance.</p>
                 </div>
             </div>
@@ -144,51 +175,50 @@
                     <p>10-30% discount on committed compute capacity for 1, 2, or 3 year term. Contact us for details.</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row buttons-row">
                 <div class="col-lg-4 col-sm-3">
-                    <a class="btn btn-primary" href="#" role="button">Special offers</a>
+                    <a class="btn special-offers-services" href="#" role="button">Special offers</a>
                 </div>
                 <div class="col-lg-4 col-sm-3">
-                    <a class="btn btn-primary" href="#" role="button">Special offers</a>
+                    <a class="btn special-offers-services" href="#" role="button">Special offers</a>
                 </div>
             </div>
         </div>
     </div>
 
-
-    <div class="col-lg-6 offset-lg-1 col-sm-12">
+    <div class="col-lg-6 offset-lg-1 col-sm-12 contact-form">
         <h5> Call us at 1-888-796-8364 to speak to a specialist today or fill out the form below: </h5>
     </div>
 
     <div class="container-fluid">
         <form>
-                <div class="row">
-                    <div class="col-lg-3 offset-lg-1 col-sm-12">
-                        <div class="form-group">
-                            <input type="text" class="form-control form-control-lg" id="Form-First-Name" placeholder="First name">
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-12">
-                        <div class="form-group">
-                            <input type="text" class="form-control form-control-lg" id="Form-Last-Name" placeholder="Last Name">
-                        </div>
+            <div class="row">
+                <div class="col-lg-3 offset-lg-1 col-sm-12 small-box-col-1">
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-lg" id="Form-First-Name" placeholder="First name">
                     </div>
                 </div>
+                <div class="col-lg-3 col-sm-12 small-box-col-2">
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-lg" id="Form-Last-Name" placeholder="Last Name">
+                    </div>
+                </div>
+            </div>
             <div class="row">
-                <div class="col-lg-3 offset-lg-1 col-sm-12">
+                <div class="col-lg-3 offset-lg-1 col-sm-12 small-box-col-1">
                     <div class="form-group">
                       <input type="text" class="form-control form-control-lg" id="Form-Company-Name" placeholder="Company Name">
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-12">
+                <div class="col-lg-3 col-sm-12 small-box-col-2">
                     <div class="form-group">
                         <select class="form-control form-control-lg" id="Form-Origin-Country">
                             <option>Country &#40;please select&#41;</option>
-                            <option>Canada</option>
-                            <option>USA</option>
-                            <option>China</option>
-                            <option>Germany</option>
-                            <option>Mexico</option>
+                            <option class="country">Canada</option>
+                            <option class="country">USA</option>
+                            <option class="country">China</option>
+                            <option class="country">Germany</option>
+                            <option class="country">Mexico</option>
                         </select>
                     </div>
                 </div>
@@ -196,14 +226,14 @@
             <div class="row">
                 <div class="col-lg-6 offset-lg-1 col-sm-12">
                     <div class="form-group">
-                      <input type="tel" class="form-control form-control-lg" id="Form-Phone-Number" placeholder="333-333-3333">
+                        <input type="tel" class="form-control form-control-lg" id="Form-Phone-Number" placeholder="Phone Number">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 offset-lg-1 col-sm-12">
                     <div class="form-group">
-                      <input type="email" class="form-control form-control-lg" id="Form-Email" placeholder="name@example.com">
+                        <input type="email" class="form-control form-control-lg" id="Form-Email" placeholder="E-mail">
                     </div>
                 </div>
             </div>
@@ -215,62 +245,57 @@
                 </div>
             </div>
         </form>
+    </div>
 
-
-    <div class="container-fluid">
+    <div class="container-fluid services-list">
         <div class="row">
             <div class="col-lg-1 offset-lg-1 col-sm-12">
-                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+                <img class="img" src="{{ "images/multi-tiered-networking-white.png" | absURL }}">
             </div>
             <div class="col-lg-4 col-sm-12">
-                Services
-
-                Text text text
+                <h3>Service</h3>
+                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
             </div>
-            <div class="col-lg-1 offset-lg-1 col-sm-12">
-                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+            <div class="col-lg-1 col-sm-12">
+                <img class="img" src="{{ "images/performant-multi-tenant-storage-white.png" | absURL }}">
             </div>
             <div class="col-lg-4 col-sm-12">
-                Services
-
-                Text text text
+                <h3>Service</h3>
+                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-1 offset-lg-1 col-sm-12">
-                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+                <img class="img" src="{{ "images/bare-metal-servers-white.png" | absURL }}">
             </div>
             <div class="col-lg-4 col-sm-12">
-                Services
-
-                Text text text
+                <h3>Service</h3>
+                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
             </div>
-            <div class="col-lg-1 offset-lg-1 col-sm-12">
-                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+            <div class="col-lg-1 col-sm-12">
+                <img class="img" src="{{ "images/dedicated-infrastructure-white.png" | absURL }}">
             </div>
             <div class="col-lg-4 col-sm-12">
-                Services
-
-                Text text text
+                <h3>Service</h3>
+                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-1 offset-lg-1 col-sm-12">
-                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+                <img class="img" src="{{ "images/elastic-compute-white.png" | absURL }}">
             </div>
             <div class="col-lg-4 col-sm-12">
-                Services
-
-                Text text text
+                <h3>Service</h3>
+                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
             </div>
-            <div class="col-lg-1 offset-lg-1 col-sm-12">
-                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+            <div class="col-lg-1 col-sm-12">
+                <img class="img" src="{{ "images/integrated-devops-tooling-white.png" | absURL }}">
             </div>
             <div class="col-lg-4 col-sm-12">
-                Services
-
-                Text text text
+                <h3>Service</h3>
+                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui</p>
             </div>
         </div>
     </div>
+
 </div>
