--- a/themes/cca-general/layouts/_default/baseof.html
+++ b/themes/cca-general/layouts/_default/baseof.html
@@ -1,14 +1,57 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-        {{ partial "head" . }}
-    </head>
-    <body>
-        {{ partial "navbar" . }}
-        {{ partial "pricing/title-card" . }}
-        {{ partial "pricing/content-card" . }}
-        {{ partial "pricing/services-card" . }}
-        {{partial "footer" . }}
-    </body>
+<!DOCTYPE html>
+<html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <base href="{{ .Site.BaseURL }}">
+  <link rel="canonical" href="{{ .Permalink }}">
+
+  {{ partial "head/keywords.html" . }}
+
+  <title>
+    {{ block "title" . }}
+      {{ with .Title }}
+        {{ . }} · {{ $.Site.Title }}
+      {{ else }}
+        {{ .Site.Title }}
+      {{ end }}
+    {{ end }}
+  </title>
+
+  {{ partial "head/styles.html" . }}
+  {{ partial "head/favicon.html" . }}
+  {{ partial "head/social.html" . }}
+
+  {{ if .RSSLink }}
+  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
+  {{ end }}
+
+  {{ partial "head/social.html" . }}
+
+  {{ .Hugo.Generator }}
+</head>
+
+<body>
+  <main class="wrapper">
+    {{ partial "header/navbar.html" . }}
+
+    <section class="intro">
+      {{ block "intro" . }}
+        {{ partial "header/intro-page.html" . }}
+      {{ end }}
+    </section>
+
+    <section class="content">
+      {{ block "content" . }}{{ end }}
+    </section>
+
+    {{ partial "footer/footer.html" . }}
+  </main>
+
+  {{ partial "footer/scripts.html" . }}
+</body>
 </html>
-    {{ partial "js" . }}
