--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -1,10 +1,10 @@
-
 <nav class="navbar navbar-expand-lg content-main-nav">
-
   <div class="collapse navbar-collapse d-flex justify-content-center">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">get support<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">
+          get support <span class="sr-only">(current)</span>
+        </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">sla</a>
@@ -26,7 +26,9 @@
   <div class="collapse navbar-collapse d-flex">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">lesson 1<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">
+          lesson 1 <span class="sr-only">(current)</span>
+        </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">lesson 2</a>
@@ -39,49 +41,40 @@
 </nav>
 
 <div class="content-card card-section">
-    <div class="container-fluid">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-4 offset-lg-1 col-sm-12">
+        <h1>Lesson 1</h1>
+        <h2>Our Infrastructure as a Service (IaaS) is purpose built for:</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolorez magna
+          aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+          ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
+          consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit.
+        </p>
         <div class="row">
-            <div class="col-lg-4 offset-lg-1 col-sm-12">
-                <h1>Lesson 1</h1>
-                <h2>Our Infrastructure as a Service (IaaS) is purpose built for:</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                    sed diam nonummy nibh euismod tincidunt ut laoreet dolorez
-                    magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                    quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                     ut aliquip ex ea commodo consequat.
-                    Duis autem vel eum iriure dolor in hendrerit in vulputate
-                    velit esse molestie consequat, vel illum dolore eu feugiat
-                    nulla facilisis at vero eros et accumsan et iusto odio
-                    dignissim qui blandit.
-                </p>
-                <div class="row">
-                    <div class="col-lg-12 col-sm-12 next-button">
-                        <a href="#">Next lesson &#x227B;</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12 col-sm-12">
-                        <a class="btn special-offer" href="#" role="button">Special offers</a>
-                        <a class="btn special-offer" href="#" role="button">Special offers</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12 col-sm-12">
-                        <a class="btn special-offer" href="#" role="button">Special offers</a>
-                        <a class="btn special-offer" href="#" role="button">Special offers</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-sm-12">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe
-                        width="560" height="315"
-                        src="https://www.youtube.com/embed/Oe3FG4EOgyU"
-                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-                    </iframe>
-                </div>
-            </div>
+          <div class="col-lg-12 col-sm-12 next-button">
+            <a href="#">Next lesson &#x227B;</a>
+          </div>
         </div>
+        <div class="row">
+          <div class="col-lg-12 col-sm-12">
+            <a class="btn special-offer" href="#" role="button">Special offers</a>
+            <a class="btn special-offer" href="#" role="button">Special offers</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 col-sm-12">
+            <a class="btn special-offer" href="#" role="button">Special offers</a>
+            <a class="btn special-offer" href="#" role="button">Special offers</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-sm-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Oe3FG4EOgyU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
