Pricing page mobile (#15)
* mobile WIP

intro wrapper-done
content - done
compute - to do
storage - to do
networking - done (???)
form - done
services - done

* compute section mobile done

* Storage section mobile - done

* Some issues fixed

While fixing known issues, new issues arose.

* finished fixing the issues for different sizes

* proposed sub-nav

* Little fixes

* Gradient-colors fixed

--- a/themes/cca-general/assets/less/layout/intro.less
+++ b/themes/cca-general/assets/less/layout/intro.less
@@ -101,3 +101,11 @@
     font-family: @font-family;
   }
 }
+
+/*MOBILE INTRO OF INNER PAGES */
+@media screen and (max-width : 768px) {
+    .intro-wrapper h1 {
+        padding-top: 70px;
+        padding-bottom: 170px;
+    }
+}
