--- a/themes/cca-general/layouts/partials/pricing/services-card.html
+++ b/themes/cca-general/layouts/partials/pricing/services-card.html
@@ -1,53 +1,69 @@
 <div class="services-card pricing">
  <div class="row">
-    <div class="col-lg-11 offset-lg-1 col-sm-12">
+    <div class="col-lg-11 offset-lg-1 col-sm-12 compute">
       <h3>Compute</h3>
     </div>
-    <div class="col-lg-11 offset-lg-1 col-sm-12 compute-price-row">
+    <div class="col-lg-11 offset-lg-1 col-sm-12 compute-price-row with-line">
       <div class="row">
+
         <div class="col-lg-2 col-sm-12 compute-price-col">
           <p class="compute-price-p">
-            <span class="dollar-sign">$</span>
-            <span class="cost-amount">108</span>
+            <span class="whitespace-group">
+                <span class="dollar-sign">$</span>
+                <span class="cost-amount">108</span>
+            </span>
             <span class="monthly-word"> Monthly</span>
           </p>
-          <p class="vcpu-gb">2 VCPU / 8 GB RAM</p>
+          <p class="plan-specs">2 VCPU / 8 GB RAM</p>
         </div>
+
         <div class="col-lg-2 col-sm-12 compute-price-col">
           <p class="compute-price-p">
-            <span class="dollar-sign">$</span>
-            <span class="cost-amount">144</span>
+            <span class="whitespace-group">
+              <span class="dollar-sign">$</span>
+              <span class="cost-amount">144</span>
+            </span>
             <span class="monthly-word"> Monthly</span>
           </p>
-          <p class="vcpu-gb">2 VCPU / 8 GB RAM</p>
+          <p class="plan-specs">2 VCPU / 8 GB RAM</p>
         </div>
-        <div class="col-lg-2 col-sm-12 ce-col compute-price-col">
+
+        <div class="col-lg-2 col-sm-12 compute-price-col with-line">
           <p class="compute-price-p">
-            <span class="dollar-sign">$</span>
-            <span class="cost-amount">216</span>
+            <span class="whitespace-group">
+              <span class="dollar-sign">$</span>
+              <span class="cost-amount">216</span>
+            </span>
             <span class="monthly-word"> Monthly</span>
           </p>
-          <p class="vcpu-gb">4 VCPU / 16 GB RAM</p>
+          <p class="plan-specs">4 VCPU / 16 GB RAM</p>
         </div>
+
+        <div class="col-lg-2 col-sm-12 compute-price-col with-line">
+          <p class="compute-price-p">
+            <span class="whitespace-group">
+              <span class="dollar-sign">$</span>
+              <span class="cost-amount">360</span>
+            </span>
+            <span class="monthly-word"> Monthly</span>
+          </p>
+          <p class="plan-specs">32 VCPU / 4 GB RAM</p>
+        </div>
+
         <div class="col-lg-2 col-sm-12 compute-price-col">
           <p class="compute-price-p">
-            <span class="dollar-sign">$</span>
-            <span class="cost-amount">360</span>
+            <span class="whitespace-group">
+              <span class="dollar-sign">$</span>
+              <span class="cost-amount">684</span>
+            </span>
             <span class="monthly-word"> Monthly</span>
           </p>
-          <p class="vcpu-gb">32 VCPU / 4 GB RAM</p>
+          <p class="plan-specs">8 VCPU / 60GB RAM</p>
         </div>
-        <div class="col-lg-2 col-sm-12 compute-price-col">
-          <p class="compute-price-p">
-            <span class="dollar-sign">$</span>
-            <span class="cost-amount">684</span>
-            <span class="monthly-word"> Monthly</span>
-          </p>
-          <p class="vcpu-gb">8 VCPU / 60GB RAM</p>
-        </div>
+
       </div>
     </div>
-    <div class="col-lg-4 offset-lg-7 col-sm-12 other-compute">
+    <div class="col-lg-4 offset-lg-7 col-sm-12 other-compute with-line">
       <p>
         Other compute offerings are available.
         <a href="#">Contact us</a>
@@ -60,24 +76,25 @@
     <div class="col-lg-11 offset-lg-1 col-sm-12">
       <h3>Storage</h3>
     </div>
+
     <div class="col-lg-7 offset-lg-1 col-sm-12">
       <h6>high performance block storage-highly available SSD</h6>
       <div class="row block-storage">
         <div class="col-lg-4 col-sm-12 storage-option">
-          <p class="storage-amount with-right-border">
+          <p class="storage-amount">
             <span class="dollar-sign-storage">$</span>
             <span class="cost-storage">0.25 CAD / GB</span>
             <span class="monthly-word"> Monthly</span>
           </p>
-          <p class="IOPS-GB with-right-border">1 IOPS/GB*</p>
+          <p class="IOPS-GB">1 IOPS/GB*</p>
         </div>
         <div class="col-lg-4 col-sm-12 storage-option">
-          <p class="storage-amount with-right-border">
+          <p class="storage-amount">
             <span class="dollar-sign-storage">$</span>
             <span class="cost-storage">0.50 CAD / GB</span>
             <span class="monthly-word"> Monthly</span>
           </p>
-          <p class="IOPS-GB with-right-border">5 IOPS/GB*</p>
+          <p class="IOPS-GB">5 IOPS/GB*</p>
         </div>
         <div class="col-lg-4 col-sm-12 storage-option">
           <p class="storage-amount">
@@ -89,7 +106,8 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-sm-12">
+
+    <div class="col-lg-3 col-sm-12">
       <h6>object storage—3 replicas</h6>
       <div class="row storage-3">
         <div class="col-lg-12 col-sm-12 storage-option storage-3-option">
@@ -101,6 +119,7 @@
         </div>
       </div>
     </div>
+
     <div class="col-lg-4 offset-lg-7 col-sm-12 additional-performance">
       <p>*Minimum guaranteed IOPS. Additional performance tiers available,
         <a href="#">contact us</a> for details.</p>
@@ -167,7 +186,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-11 offset-lg-1 col-sm-11 offset-sm-11 license-mobility">
+        <div class="col-lg-11 offset-lg-1 col-sm-11 offset-sm-1 license-mobility">
           <p>*Microsoft clients who meet the criteria are eligible for License Mobility through Microsoft Software Assurance.</p>
         </div>
       </div>
@@ -178,10 +197,10 @@
         </div>
       </div>
       <div class="row buttons-row">
-        <div class="col-lg-4 col-sm-3">
+        <div class="col-lg-5 col-md-12">
           <a class="btn special-offers-services" href="#" role="button">Special offers</a>
         </div>
-        <div class="col-lg-4 col-sm-3">
+        <div class="col-lg-5 col-md-12">
           <a class="btn special-offers-services" href="#" role="button">Special offers</a>
         </div>
       </div>
