--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -22,8 +22,7 @@
   </div>
 </nav>
 
-<nav class="navbar navbar-expand-lg content-secondary-nav">
-  <div class="collapse navbar-collapse d-flex">
+<nav class="navbar navbar-expand-sm content-secondary-nav justify-content-center">
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="#">
@@ -37,7 +36,6 @@
         <a class="nav-link" href="#">lesson 3</a>
       </li>
     </ul>
-  </div>
 </nav>
 
 <div class="content-card card-section">
@@ -52,28 +50,28 @@
           ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
           consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit.
         </p>
-        <div class="row">
-          <div class="col-lg-12 col-sm-12 next-button">
-            <a href="#">Next lesson &#x227B;</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 col-sm-12">
-            <a class="btn special-offer" href="#" role="button">Special offers</a>
-            <a class="btn special-offer" href="#" role="button">Special offers</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 col-sm-12">
-            <a class="btn special-offer" href="#" role="button">Special offers</a>
-            <a class="btn special-offer" href="#" role="button">Special offers</a>
-          </div>
-        </div>
       </div>
-      <div class="col-lg-6 col-sm-12">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/Oe3FG4EOgyU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
+      <div class="col-lg-6 col-sm-12 lesson-video">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.youtube.com/embed/Oe3FG4EOgyU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-11 offset-lg-1 col-sm-12 next-button">
+        <a href="#">Next lesson &#x227B;</a>
+      </div>
+    </div>
+    <div class="row special-offer-row">
+      <div class="col-lg-11 offset-lg-1 col-sm-12">
+        <a class="btn special-offer" href="#" role="button">Special offers</a>
+        <a class="btn special-offer" href="#" role="button">Special offers</a>
+      </div>
+    </div>
+    <div class="row special-offer-row">
+      <div class="col-lg-11 offset-lg-1 col-sm-12">
+        <a class="btn special-offer" href="#" role="button">Special offers</a>
+        <a class="btn special-offer" href="#" role="button">Special offers</a>
       </div>
     </div>
   </div>
